# mince

./: .gitmodules  Cargo.toml  README.md  hl2.CT  hl2_linux.CT  mince.code-workspace
.cargo/: config.toml
lib/gui/: Cargo.toml
lib/module_maps/: Cargo.toml
lib/module_maps/src/: lib.rs
lib/module_maps/src/native/: mod.rs  windows.rs
module_maps/: Cargo.toml
module_maps/src/: error.rs  lib.rs
module_maps/src/native/: linux.rs
module_maps/src/native/windows/: mod.rs
script/: eject_linux.bash  inject_linux.bash  reinject_linux.bash
src/: gui.rs  hack_main.rs  hook.rs  hooks.rs  lib.rs  menu.rs  module_name.rs  stop_token.rs
src/features/: aimbot.rs  bunnyhop.rs  mod.rs
src/gui/: mod.rs
src/lib_init_deinit_free/: linux.rs  mod.rs  windows.rs
src/memory/: detour.rs  hooks.rs  mem_vars.rs  mod.rs  offsets.rs  overlay_structs.rs  signatures.rs
src/module_maps/native/: linux.rs  mod.rs
src/native/linux/: initialize_deinitialize_exit.rs  mod.rs
src/native/windows/: box_handle.rs  initialize_deinitialize_exit.rs  mod.rs
