[package]
name = "mince"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
module_maps = { path = "lib/module_maps" }
gui = { path = "lib/gui" }
keystone = { path = "lib/keystone/bindings/rust" }
region = "3.0.0"
regex = "1.9"
anyhow = "1.0.71"
lazy_static = "1.4.0"
nalgebra-glm = "0.18"

[target.'cfg(target_os = "windows")'.dependencies]
once_cell = "1.10.0"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.33"
features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",

    # MessageBox + literal strings
    "alloc",
    "Win32_UI_WindowsAndMessaging",
]
