[package]
name = "module_maps"
version = "0.1.0"
edition = "2021"

[lib]
# crate-type = ["rlib"]

# Todo: native lib

[dependencies]
thiserror = "1.0.30"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.33"
features = [
    "Win32_Foundation",

    # Enumerate modules
    "Win32_System_Diagnostics_ToolHelp",
]

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[features]
expose_native_module_types = []